--- a/index.html
+++ b/index.html
@@ -1,88 +1,100 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="keywords" content="Petr Galkin, CV, resume">
-        <meta name="description" content="Это сайт - резюме Петра Галкина">
-        <title>Petr Resume</title>
-    </head>
-    <body>
-       <img src="petr.jpg" alt="Петр Галкин" width="250px">
-       <h1>Петр Галкин</h1>       
-       <p>Я начинающаю свой пусть в изучении <strong>Frontend</strong> разработки.</p>
-       <p>Дополнительно я веду бизнес на <em>OZON и Wildberries</em>.</p>
-       <h4>Список социальных сетей и маркетплейсов</h4>
-       
-       <a href="https://vk.com/id30809794" target="_blank" title="Ссылка на мой профиль в VK">VK</a>
-       | 
-       <a href="https://www.ozon.ru/seller/brightmakeup-51400/" target="_blank" title="Ссылка на мой магазин OZON">OZON</a>
-       | 
-       <a href="https://www.wildberries.ru/seller/57469" target="_blank" title="Ссылка на мой магазин Wildberries">Wildberries</a>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Petr Galkin, CV, resume">
+    <meta name="description" content="Это сайт - резюме Петра Галкина">
+    <title>Petr Resume</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="info">
+            <img src="petr.jpg" alt="Петр Галкин" class="avatar">
+            <div class="info-text">
+                <h1>Петр Галкин</h1>
+                <p>Я начинающий свой путь в изучении <strong>Frontend</strong> разработки.</p>
+                <p>Дополнительно я веду бизнес на <em>OZON и Wildberries</em>.</p>
 
-       <h2>Мои хобби</h2>
-
-       <ol>
-        <li>Путешествия</li>
-        <li>Рыбалка</li>
-        <li>Плавание</li>
-        <li>Бизнес</li>
-       </ol>
-
-       <h3>Опыт работы</h3>
-       <table width="600px">
-        <thead>
-            <tr>
-                <th>Название</th>
-                <th>Должность</th>
-                <th>Год</th>
-            </tr>
-           </thead>
-           <tbody>
-            <tr>
-                <td>Hay Harbor Club</td>
-                <td>Maintenance</td>
-                <td>2011 - 2011</td>
-            </tr>
-            <tr>
-                <td>Домодедово</td>
-                <td>Агент регистрации пассажиров</td>
-                <td>2018 - 2018</td>
-            </tr>
-            <tr>
-                <td>Т-Банк</td>
-                <td>Менеджер</td>
-                <td>2019 - 2022</td>
-            </tr>
-            <tr>
-                <td>ИП</td>
-                <td>Предприниматель</td>
-                <td>2022 - н.в.</td>
-            </tr>
-           </tbody>
-
-       </table>
-
-       <h2>Связаться со мной</h2>
-       <form action="/">
-        <div>
-            <label for="name">Ваше имя:</label>
-            <input type="text" id="name" placeholder="Введите имя">
+                <h4>Список социальных сетей и маркетплейсов</h4>
+                <a href="https://vk.com/id30809794" target="_blank" title="Ссылка на мой профиль в VK">VK</a>
+                |
+                <a href="https://www.ozon.ru/seller/brightmakeup-51400/" target="_blank"
+                    title="Ссылка на мой магазин OZON">OZON</a>
+                |
+                <a href="https://www.wildberries.ru/seller/57469" target="_blank"
+                    title="Ссылка на мой магазин Wildberries">Wildberries</a>
+            </div>
         </div>
-        <div>
-            <label for="email">Ваш email:</label>
-            <input type="email" id="email" placeholder="Введите email">
+        <div class="card bg-lightsteelblue">
+            <h3>Хобби</h3>
+            <ol class="list">
+                <li>Путешествия</li>
+                <li>Рыбалка</li>
+                <li>Плавание</li>
+                <li>Бизнес</li>
+            </ol>
         </div>
-        <div>
-            <label for="massage">Ваше сообщение:</label>
-            <br>
-            <textarea id="massage" cols="30" rows="5"></textarea>
+        <div class="card bg-palevioletred">
+            <h2>Опыт работы</h2>
+            <table class="table">
+                <!-- <thead>
+                    <tr>
+                        <th>Название</th>
+                        <th>Должность</th>
+                        <th>Год</th>
+                    </tr>
+                </thead> -->
+                <tbody>
+                    <tr>
+                        <td>Hay Harbor Club</td>
+                        <td>Maintenance</td>
+                        <td>2011 - 2011</td>
+                    </tr>
+                    <tr>
+                        <td>Домодедово</td>
+                        <td>Агент регистрации пассажиров</td>
+                        <td>2018 - 2018</td>
+                    </tr>
+                    <tr>
+                        <td>Т-Банк</td>
+                        <td>Менеджер</td>
+                        <td>2019 - 2022</td>
+                    </tr>
+                    <tr>
+                        <td>ИП</td>
+                        <td>Предприниматель</td>
+                        <td>2022 - н.в.</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        <div>
-            <input type="submit" value="Отправить!">
+        <div class="card bg-tomato">
+
+            <form action="/" class="form">
+                <h2>Связаться со мной</h2>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="name">Ваше имя:</label>
+                        <input type="text" id="name" placeholder="Введите имя">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Ваш email:</label>
+                        <input type="email" id="email" placeholder="Введите email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="massage">Ваше сообщение:</label>
+                    <textarea id="massage" cols="30" rows="5"></textarea>
+                </div>
+                <div>
+                    <input type="submit" value="Отправить" class="btn">
+                    <input type="reset" class="btn">
+                </div>
+            </form>
         </div>
-    </form>
-       
-    </body>
+    </div>
+</body>
 </html>
