--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <h4>Список социальных сетей и маркетплейсов</h4>
                 <a href="https://vk.com/id30809794" target="_blank" title="Ссылка на мой профиль в VK">VK</a>
                 |
+                <a href="https://github.com/petrgalkin" target="_blank" title="Ссылка на мой профиль в GitHub">GitHub</a>
+                |
                 <a href="https://www.ozon.ru/seller/brightmakeup-51400/" target="_blank"
                     title="Ссылка на мой магазин OZON">OZON</a>
                 |
@@ -29,7 +31,7 @@
             </div>
         </div>
         <div class="card bg-lightsteelblue">
-            <h3>Хобби</h3>
+            <h2>Хобби</h2>
             <ol class="list">
                 <li>Путешествия</li>
                 <li>Рыбалка</li>
@@ -71,6 +73,19 @@
                 </tbody>
             </table>
         </div>
+
+        <div class="card bg-yellow">
+            <h2>Мои курсы</h2>
+      
+            <ul class="link-list">
+                <li>
+                    <a href="https://fs.gcfiles.net/fileservice/file/thumbnail/h/1436875aa2efa1645c91bdd53583b657.png/s/800x/a/177331/sc/101" target="_blank">Основы HTML&CSS. Диплом №5989</a>
+                </li>
+                
+            </ul>
+          </div>
+
+
         <div class="card bg-tomato">
 
             <form action="/" class="form">
